--- a/Steel Sentinel/Packages/manifest.json
+++ b/Steel Sentinel/Packages/manifest.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.collab-proxy": "2.0.4",
     "com.unity.feature.development": "1.0.1",
     "com.unity.inputsystem": "1.6.3",
+    "com.unity.recorder": "4.0.2",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.4",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.9",
