--- a/Steel Sentinel/Packages/manifest.json
+++ b/Steel Sentinel/Packages/manifest.json
@@ -5,8 +5,9 @@
     "com.unity.collab-proxy": "2.0.4",
     "com.unity.feature.development": "1.0.1",
     "com.unity.inputsystem": "1.6.3",
-    "com.unity.render-pipelines.universal": "14.0.8",
+    "com.unity.postprocessing": "3.2.2",
     "com.unity.recorder": "4.0.2",
+    "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.4",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.9",
